# NomadBSD

./: .gitmodules  LICENSE  Makefile  README.md  THANKS  build  build.cfg  build.hlp  common  pkg.list  release  upload
config/: VERSION
config/boot/: beastie.4th  brand-nomadbsd.4th  brand-nomadbsdbw.4th  loader  loader.conf  loader.conf.local  logo-nomadbsd.4th  pxeboot  recover
config/etc/: cecho  crontab  devfs.rules  freebsd-update.conf  fstab  initgfx_device.db  initgfx_xorg.cfg  login.conf  login.conf.db  make.conf  motd  rc.conf  rc.subr  sysctl.conf  syslog.conf  ttys
config/root/: .cshrc  .login  .profile  .zshrc
extra-ports/xdg-utils/: Makefile
handbook/: Makefile  handbook.md  header  style.css
kernel/: NOMADBSD
modules/fusefs2/: Makefile  fuse_ipc.c  fuse_vnops.c
nomad/: .Xdefaults  .bash_profile  .bashrc  .compton.conf  .cshrc  .fehbg  .firstrun  .gtkrc-2.0  .gtkrc.mine  .login  .login_conf  .mail_aliases  .mailrc  .profile  .rhosts  .shrc  .tmux.conf  .viminfo  .vimrc  .xbindkeysrc  .xinitrc  .xprofile  .zshrc
nomad/.config/: ibus.ini  mimeapps.list  picom.conf  plank.ini  update_obmenu.ignore
nomad/.icons/: capitaine-cursors
nomad/.ssh/: config
nomad/.vim/: .netrwhist
nomad/Desktop/: home
nomad/Wallpapers/: CREDITS
src/lbi-gui/: LICENSE  Makefile  lbi-gui.desktop.in  lbi-gui.in  lbi-gui.pro
src/nomadbsd-adduser-gui/: nomadbsd-adduser  nomadbsd-adduser-gui.desktop  nomadbsd-adduser-gui.pro  resources.qrc
src/nomadbsd-setup-gui/: .qmake.stash  CMakeLists.txt  Makefile  defs.h.in  moc_password.cpp  moc_predefs.h  moc_wizard.cpp  nomadbsd-setup-gui  nomadbsd-setup-gui.pro  qrc_resources.cpp  resources.qrc
src/nomadbsd-setup-gui/backend/: nomadbsd-setup  nomadbsd-setup.in  nomadbsd_setup_mac.pm  nomadbsd_setup_pc.pm  nomadbsd_setup_zfs.pm
src/nomadbsd-setup-gui/backend/mac/: nomadbsd-setup
src/nomadbsd-setup-gui/backend/pc/: nomadbsd-setup
src/nomadbsd-setup-gui/files/: gtkrc-2.0  input-keyboard.conf  rc.conf.in  video-vesa.conf  xinitrc
src/nomadbsd-setup-gui/locale/: nomadbsd-setup-gui_ar.ts  nomadbsd-setup-gui_cs.qm  nomadbsd-setup-gui_cs.ts  nomadbsd-setup-gui_de.qm  nomadbsd-setup-gui_de.ts  nomadbsd-setup-gui_es.ts  nomadbsd-setup-gui_fr.qm  nomadbsd-setup-gui_fr.ts  nomadbsd-setup-gui_hi.ts  nomadbsd-setup-gui_hu.ts  nomadbsd-setup-gui_id.qm  nomadbsd-setup-gui_id.ts  nomadbsd-setup-gui_it.ts  nomadbsd-setup-gui_ja.ts  nomadbsd-setup-gui_ko.ts  nomadbsd-setup-gui_pl.ts  nomadbsd-setup-gui_pt.ts  nomadbsd-setup-gui_ru.qm  nomadbsd-setup-gui_ru.ts  nomadbsd-setup-gui_tr.ts  nomadbsd-setup-gui_uk.ts  nomadbsd-setup-gui_zh.ts
src/nomadbsd-setup-gui/src/: backend.h  main.cpp  password.cpp  password.h  wizard.cpp  wizard.h
(+1202 files in other folders)
